- update to 2.0.2 - his is an update of net/ekiga and net/opal.  Requires the latest update to   pwlib (FreeBSD port is uptodate since one week).   This update also incorporates a new user-contributed patch,   see Bug 345308 - Keypad does not work properly at   http://bugzilla.gnome.org/show_bug.cgi?id=345308

PR:		ports/99764
Submitted by:	maintainer (Jean-Baptiste Quenot)